# Metropolia_Chess

./: .gitignore  CMakeLists.txt  README.md
assets/models/: chess_set.gltf
assets/shaders/: chess_shader.wgsl
src/: chess.cpp  chess.h  main.cpp  move.h  position.cpp  position.h
src/chess/: chess.cpp  chess.h  move.cpp  move.h  position.cpp  position.h
src/renderer/: model_loader.cpp  model_loader.h  renderer.cpp  renderer.h  renderer_utils.cpp  renderer_utils.h
